@@ -1,6 +1,6 @@
 
-R version 3.5.1 Patched (2018-07-24 r75005) -- "Feather Spray"
-Copyright (C) 2018 The R Foundation for Statistical Computing
+R version 3.6.1 Patched (2019-08-21 r77066) -- "Action of the Toes"
+Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -15,7 +15,15 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 'help.start()' for an HTML browser interface to help.
 Type 'q()' to quit R.
 
-> ### lmrob()  with "real data"
+> ### lmrob()  with "real data" -----------------------
+> 
+> ## testing functions:
+> source(system.file("test-tools-1.R",  package = "Matrix", mustWork=TRUE))# -> assert.EQ(), ..
+Loading required package: tools
+> (doExtras <- robustbase:::doExtras())
+[1] FALSE
+> showProc.time()
+Time elapsed:  0.43 0.036 0.499 
 > 
 > library(robustbase)
 > 
@@ -135,6 +143,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 > cX3 <- c(Estimate = -0.627327396, `Std. Error` = 0.15844971,
 +          `t value` = -3.9591577, `Pr(>|t|)` = 0.000584156)
 > stopifnot(all.equal(cX3, coef(summary(m0.sali))["X3",], tolerance = 1e-6))
+> showProc.time()
+Time elapsed:  0.032 0 0.032 
 > 
 > 
 > ##  example(lmrob)
@@ -264,6 +274,8 @@ seed : int(0)
 > stopifnot(coef(lmST)[["log.Te"]] < 0,
 +           all.equal(coef(RlmST), c("(Intercept)" = -4.969, log.Te=2.253), tol = 1e-3),
 +           c(11,20,30,34) == which(RlmST$w < 0.01))
+> showProc.time()
+Time elapsed:  0.014 0 0.014 
 > ## ==> Now see that  "KS2011" and "KS2014" both break down -- and it is the fault of "lqq" *only* :
 > (RlmST.11 <- update(RlmST, control = lmrob.control("KS2011",                             trace= 1)))
 lmrob_S(n = 47, nRes = 500): fast_s() [non-large n]:
@@ -445,6 +457,21 @@ Coefficients:
 (Intercept)       log.Te  
      -4.969        2.253  
 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
+> 
 > (RlmSTbM14 <- update(RlmST,control = lmrob.control("KS2014", method="MM", psi="biweight",trace= 1)))
 lmrob_S(n = 47, nRes = 1000): fast_s() [non-large n]:
  Subsampling to find candidate betas:
@@ -589,6 +616,9 @@ RlmSTb.14   -4.969388  2.253161   -5.519602  2.3773625
 RlmSTbM11   -9.570830  3.290361   -4.969388  2.2531613
 RlmSTbM14   -9.570839  3.290363   -4.969388  2.2531613
 > 
+> showProc.time()
+Time elapsed:  0.08 0 0.081 
+> 
 > options(digits = 5)# less platform dependence
 > ## Directly look at init.S():
 > x.s <- model.matrix(~ log.Te, data = starsCYG)
@@ -724,7 +754,8 @@ welsh         6.9069 -0.43326
 ggw           6.9168 -0.43662
 lqq           6.9181 -0.43709
 hampel        6.9289 -0.43905
-> 
+> showProc.time()
+Time elapsed:  0.033 0 0.033 
 > 
 > 
 > ##=== Werner's analysis: Sensitivity curves for the most-left obs  =========================================
@@ -761,23 +792,25 @@ Coefficients:
 +            ,"KS14, Welsh"
 +            )
 > nEst <- length(leg.s) # == number of estimators used below
-> nn <- length(y1 <- c(NA, seq(2,9, length=64)))
+> nn <- length(y1 <- c(NA, seq(2,9, length=if(doExtras) 64 else 8)))
 > nCf <- length(coef(rr)) + 1 # +1: sigma
 > r.coef <- matrix(NA, length(y1), nEst*nCf)
 > t.d <- dd
 > oo <- options(warn = 1)
+> showProc.time()
+Time elapsed:  0.02 0 0.02 
 > ## vary the left-most observation and fit all three
 > for (i in seq_along(y1)) {
-+   cat(sprintf("%3d: %11.6g -- ", i, y1[i]))
++   cat(sprintf("i=%3d, y1[i]=%11.6g: -- ", i, y1[i]))
 +   t.d[1,2] <- y1[i]
 +   ## the (old) default does not converge in 4 cases
-+   lr    <- update(rr,   data=t.d, control = lmrob.control(maxit=500))                 ; cat("1")
-+   lr14  <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="lqq") )      ; cat("2")
-+   lr14b <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="biweight") ) ; cat("3")
-+   lr14o <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="optimal" ) ) ; cat("4")
-+   lr14h <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="hampel"  ) ) ; cat("5")
-+   lr14g <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="ggw"     ) ) ; cat("6")
-+   lr14a <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="welsh"   ) ) ; cat("7")
++   lr    <- update(rr,   data=t.d, control = lmrob.control(maxit=500))                ; cat(" 1")
++   lr14  <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="lqq") )     ; cat(" 2")
++   lr14b <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="biweight") ); cat(" 3")
++   lr14o <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="optimal" ) ); cat(" 4")
++   lr14h <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="hampel"  ) ); cat(" 5")
++   lr14g <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="ggw"     ) ); cat(" 6")
++   lr14a <- update(rr14, data=t.d, control = lmrob.control("KS2014", psi="welsh"   ) ); cat(" 7")
 +   r.coef[i,] <- c(coef(lr   ), sigma(lr),
 +                   coef(lr14 ), sigma(lr14),
 +                   coef(lr14b), sigma(lr14b),
@@ -787,79 +820,17 @@ Coefficients:
 +                   coef(lr14a), sigma(lr14a))
 +   cat("\n")
 + }
-  1:          NA -- 1234567
-  2:           2 -- 1234567
-  3:     2.11111 -- 1234567
-  4:     2.22222 -- 1234567
-  5:     2.33333 -- 1234567
-  6:     2.44444 -- 1234567
-  7:     2.55556 -- 1234567
-  8:     2.66667 -- 1234567
-  9:     2.77778 -- 1234567
- 10:     2.88889 -- 1234567
- 11:           3 -- 1234567
- 12:     3.11111 -- 1234567
- 13:     3.22222 -- 1234567
- 14:     3.33333 -- 1234567
- 15:     3.44444 -- 1234567
- 16:     3.55556 -- 1234567
- 17:     3.66667 -- 1234567
- 18:     3.77778 -- 1234567
- 19:     3.88889 -- 1234567
- 20:           4 -- 1234567
- 21:     4.11111 -- 1234567
- 22:     4.22222 -- 1234567
- 23:     4.33333 -- 1234567
- 24:     4.44444 -- 1234567
- 25:     4.55556 -- Warning in lmrob.fit(x, y, control, init = init) :
-  M-step did NOT converge. Returning unconverged SM-estimate
-1234567
- 26:     4.66667 -- Warning in lmrob.fit(x, y, control, init = init) :
-  M-step did NOT converge. Returning unconverged SM-estimate
-1234567
- 27:     4.77778 -- Warning in lmrob.fit(x, y, control, init = init) :
-  M-step did NOT converge. Returning unconverged SM-estimate
-1234567
- 28:     4.88889 -- Warning in lmrob.fit(x, y, control, init = init) :
-  M-step did NOT converge. Returning unconverged SM-estimate
-1234567
- 29:           5 -- 1234567
- 30:     5.11111 -- 1234567
- 31:     5.22222 -- 1234567
- 32:     5.33333 -- 1234567
- 33:     5.44444 -- 1234567
- 34:     5.55556 -- 1234567
- 35:     5.66667 -- 1234567
- 36:     5.77778 -- 1234567
- 37:     5.88889 -- 1234567
- 38:           6 -- 1234567
- 39:     6.11111 -- 1234567
- 40:     6.22222 -- 1234567
- 41:     6.33333 -- 1234567
- 42:     6.44444 -- 1234567
- 43:     6.55556 -- 1234567
- 44:     6.66667 -- 1234567
- 45:     6.77778 -- 1234567
- 46:     6.88889 -- 1234567
- 47:           7 -- 1234567
- 48:     7.11111 -- 1234567
- 49:     7.22222 -- 1234567
- 50:     7.33333 -- 1234567
- 51:     7.44444 -- 1234567
- 52:     7.55556 -- 1234567
- 53:     7.66667 -- 1234567
- 54:     7.77778 -- 1234567
- 55:     7.88889 -- 1234567
- 56:           8 -- 1234567
- 57:     8.11111 -- 1234567
- 58:     8.22222 -- 1234567
- 59:     8.33333 -- 1234567
- 60:     8.44444 -- 1234567
- 61:     8.55556 -- 1234567
- 62:     8.66667 -- 1234567
- 63:     8.77778 -- 1234567
- 64:     8.88889 -- 1234567
- 65:           9 -- 1234567
+i=  1, y1[i]=         NA: -- 1 2 3 4 5 6 7
+i=  2, y1[i]=          2: -- 1 2 3 4 5 6 7
+i=  3, y1[i]=          3: -- 1 2 3 4 5 6 7
+i=  4, y1[i]=          4: -- 1 2 3 4 5 6 7
+i=  5, y1[i]=          5: -- 1 2 3 4 5 6 7
+i=  6, y1[i]=          6: -- 1 2 3 4 5 6 7
+i=  7, y1[i]=          7: -- 1 2 3 4 5 6 7
+i=  8, y1[i]=          8: -- 1 2 3 4 5 6 7
+i=  9, y1[i]=          9: -- 1 2 3 4 5 6 7
+> showProc.time()
+Time elapsed:  0.881 0.006 0.888 
 > options(oo)
 > 
 > ## cbind(y=y.1, r.coef)
@@ -881,6 +852,8 @@ Coefficients:
 > pMat(j = 2+jj0, main = quote("slope" ~~ hat(beta[2])), "bottomleft")
 > pMat(j = 3+jj0, main = quote(hat(sigma)), "topleft")
 > par(op)
+> showProc.time()
+Time elapsed:  0.045 0.001 0.057 
 > ## --------------------------------
 > 
 > set.seed(47)
@@ -1074,6 +1047,8 @@ seed : int(0)
 +    ,
 +     identical(iNAr, is.na(r.mN0 <- residuals(mhNx0)))
 + )
+> showProc.time()
+Time elapsed:  0.023 0.001 0.025 
 > 
 > data(stackloss)
 > mSL <- lmrob(stack.loss ~ ., data = stackloss)
@@ -1121,10 +1096,10 @@ compute.outlier.stats
                  "SM" 
 seed : int(0) 
 > 
+> showProc.time()
+Time elapsed:  0.003 0.003 0.009 
 > 
-> cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  9.254 0.203 9.478 0.002 0.001 
 > 
 > proc.time()
    user  system elapsed 
-  9.256   0.204   9.478 
+  1.651   0.076   1.830 
